# AlgAdv

./: .gitignore  CMakeLists.txt  main.cpp  relazione.tex  res.txt  time.txt
algorithms/: kruskal_naive.h  kruskal_naive2.h  kruskal_naive_bfs.h  kruskal_naive_dfs.h  kruskal_union_find.h  prim.h
data_structures/: AdjacencyList.h  Edge.h  EdgeAlternative.h  MinHeap.h  Parser.h  UnionFind.h  adjacencyList.h
dataset/: 1_test.txt
graph_structures/: AdjacencyList.h  Edge.h
relazione/: BFS.cpp  DFS.cpp  grafo_tempo_totale.xlsx  k_naive.cpp  k_union.cpp  prim.cpp  relazione.tex  sum_dataset.tex  time.tex  time_mean.tex  total_weight.cpp
relazione/R_script/: cond.R  final_mean.csv  final_time.csv  out.txt  prim_time.txt  res.txt  res_tab.csv  res_tab2.csv  table_generator.R  time.tex  time.txt  time_mean.csv  time_mean2.csv  time_mean3.csv  time_tab.csv  time_tab2.csv  union_time.txt  weight_over_time.txt  weight_tab.csv  weight_tab2.csv
utility/: Parser.h
